# learn_cmake

./: .gitignore  CMakeLists.txt  README.md
import_cuda/: CMakeLists.txt  main.cu
import_opencv/: CMakeLists.txt  main.cpp
